--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "json-diff-patch": "0.0.1",
     "json-patch-gen": "^1.0.2",
     "json-pointer": "^0.2.2",
+    "jspath": "^0.2.14",
     "lodash": "^2.4.1",
     "rfc6902": "0.0.6",
     "spahql": "^0.7.6"
