--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "results-to-patch",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./lib/convert.js",
   "scripts": {
     "test": "mocha"
   },
