Revert "compress by default, set entry point in package.json"
This reverts commit 63edd9b4dc645509229e7a237268b9e0fe708c55.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "results-to-patch",
   "version": "1.0.0",
   "description": "",
-  "main": "./lib/convert.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha"
   },
