atomic multistory move

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jspath": "^0.2.14",
     "legacy-encoding": "^3.0.0",
     "lodash": "^2.4.1",
+    "ramda": "^0.18.0",
     "rfc6902": "0.0.6",
     "spahql": "^0.7.6"
   },
