--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha",
-    "watch": "./node_modules/.bin/mocha --compilers js:babel/register -w"
+    "test": "./node_modules/.bin/mocha --compilers js:babel-core/register",
+    "watch": "./node_modules/.bin/mocha"
   },
   "author": "",
   "license": " ",
@@ -25,6 +25,11 @@
   },
   "devDependencies": {
     "babel": "*",
+    "babel-cli": "^6.2.0",
+    "babel-core": "^6.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.1.18",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-stage-0": "^6.1.18",
     "chai": "*",
     "glob": "*",
     "mocha": "*",
