--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^1.10.0",
     "glob": "^4.3.5",
     "mocha": "^2.1.0",
+    "object-assign": "^4.0.1",
     "rfc6902-json-diff": "^0.1.2"
   }
 }
